[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/purewhite_gradient_texture.tres" type="Gradient" id=3]
[ext_resource path="res://shader/Sihoutte.gdshader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/outline_color = Color( 0.682353, 0.0980392, 0.0705882, 1 )
shader_param/active = false

[sub_resource type="GradientTexture2D" id=1]
gradient = ExtResource( 3 )
height = 4

[sub_resource type="GradientTexture2D" id=2]
gradient = ExtResource( 3 )
height = 4

[node name="Enemy" instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )
exp_on_death = 0

[node name="AnimatedSprite" parent="." index="1"]
material = SubResource( 3 )

[node name="PathTimer" type="Timer" parent="." index="4"]
wait_time = 0.5
autostart = true

[node name="Position2D" type="Position2D" parent="." index="6"]
scale = Vector2( 0.2, 0.3 )

[node name="mini_hp_bar" type="TextureProgress" parent="Position2D" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_right = 32.0
margin_bottom = 4.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 5, 0 )
value = 50.0
texture_under = SubResource( 1 )
texture_progress = SubResource( 2 )
tint_under = Color( 0, 0, 0, 0.176471 )
tint_progress = Color( 0.72549, 0.745098, 0.0666667, 1 )

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
